# plant-monitor-app

./: .gitignore
client/moisture-ui/: README.md  package-lock.json  package.json
client/moisture-ui/src/: App.vue  main.js
client/moisture-ui/src/components/: SensorDisplay.vue
server/moisture-api/: README.rst  pyproject.toml
server/moisture-api/tests/: test_moisture_api.py
