[tool.poetry]
name = "moisture-api"
version = "0.1.0"
description = ""
authors = ["mattkernow <walsh.gis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.taskipy.tasks]
dev-server = "uvicorn moisture_api.main:app --reload"
